modifications to template and colours for dropdown list of inputs

--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accountability.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accountability.mdx
@@ -21,7 +21,7 @@
       <td style={{paddingBottom: "15px"}}>Are there mechanisms in place to determine the proper allocation of accountability and responsibility for any potential competition or consumer issues arising from the AI model (for e.g. clear internal governance mechanisms to ensure clear roles and responsibilities by the organisation and/or clear responsibilities between different parties within the broader supply chain – partners, suppliers, customers, third parties)?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the company has the accountability and incentive to improve consumers’ experience.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="7_1_1" value={props.data["7_1_1"]} onChange={(e)=>props.onChangeData("7_1_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="7_1_1" value={props.data["7_1_1"]} onChange={(e)=>props.onChangeData("7_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -38,7 +38,7 @@
       <td style={{paddingBottom: "15px"}}>Does the company provide clear and easily accessible information to consumers about the available routes for should issues or negative experiences with AI products or services arise?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that clear information about routes to redress are provided to consumers for issues that can occur.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="7_1_2" value={props.data["7_1_2"]} onChange={(e)=>props.onChangeData("7_1_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="7_1_2" value={props.data["7_1_2"]} onChange={(e)=>props.onChangeData("7_1_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
