--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accuracy.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accuracy.mdx
@@ -21,7 +21,7 @@
       <td style={{paddingBottom: "15px"}}>Has the company established a strategy to ensure that the AI system is safe, and does not generate content that violates laws and regulations or is harmful?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that mechanisms are in place to ensure that information generate is as accurate as possible and not misleading.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="8_1_1" value={props.data["8_1_1"]} onChange={(e)=>props.onChangeData("8_1_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="8_1_1" value={props.data["8_1_1"]} onChange={(e)=>props.onChangeData("8_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -38,7 +38,7 @@
       <td style={{paddingBottom: "15px"}}>Has the company established clear processes for handling and correcting errors or inaccuracies identified in the AI model's outputs? (e.g. root cause analysis, model retraining, human-in-the-loop review)</td>
       <td style={{paddingBottom: "15px"}}>Ensure that there are established procedures to identify, address, and correct any errors or inaccuracies in the model's outputs in a timely manner.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="8_1_2" value={props.data["8_1_2"]} onChange={(e)=>props.onChangeData("8_1_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="8_1_2" value={props.data["8_1_2"]} onChange={(e)=>props.onChangeData("8_1_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -55,7 +55,7 @@
       <td style={{paddingBottom: "15px"}}>Is the company actively investing in research and development to improve the reliability and accuracy of its AI models, and does it prioritize the continuous enhancement of model performance?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the company is actively investing in improving reliability and accuracy of AI models.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="8_1_3" value={props.data["8_1_3"]} onChange={(e)=>props.onChangeData("8_1_3",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="8_1_3" value={props.data["8_1_3"]} onChange={(e)=>props.onChangeData("8_1_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -87,7 +87,7 @@
       <td style={{paddingBottom: "15px"}}>Has the company put in place methods to record the provenance of the AI model, including the various versions, configurations, data transformations, and underlying source code?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that documentations are kept for the different versions of the model.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="8_2_1" value={props.data["8_2_1"]} onChange={(e)=>props.onChangeData("8_2_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="8_2_1" value={props.data["8_2_1"]} onChange={(e)=>props.onChangeData("8_2_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -111,7 +111,7 @@
       </td>
       <td style={{paddingBottom: "15px"}}>Ensure that the steps on cleaning of the raw input data used in the training process are documented and consistent across different model versions.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="8_2_2" value={props.data["8_2_2"]} onChange={(e)=>props.onChangeData("8_2_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="8_2_2" value={props.data["8_2_2"]} onChange={(e)=>props.onChangeData("8_2_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -128,7 +128,7 @@
       <td style={{paddingBottom: "15px"}}>Has the company conducted an assessment for repeatability by reviewing if the model produces a consistent output based on the same input?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the model is accurate and consistent to reproduce the same output results with the same input.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="8_2_3" value={props.data["8_2_3"]} onChange={(e)=>props.onChangeData("8_2_3",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="8_2_3" value={props.data["8_2_3"]} onChange={(e)=>props.onChangeData("8_2_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
