--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/fairness.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/fairness.mdx
@@ -24,7 +24,7 @@
       <br />-Regular data drifts and representation audits to maintain fairness over time<br /></td>
       <td style={{paddingBottom: "15px"}}>Ensure training data is diverse and representative in order to avoid biasness against certain groups, firms or individuals. </td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="4_1_1" value={props.data["4_1_1"]} onChange={(e)=>props.onChangeData("4_1_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="4_1_1" value={props.data["4_1_1"]} onChange={(e)=>props.onChangeData("4_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -57,7 +57,7 @@
       <td style={{paddingBottom: "15px"}}>Is the AI model's decision-making process purely based on input data and does not unduly favour specific brands or products?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the AI model does not unduly favor specific brands or products, and the decision-making process should be based on inputs only.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="4_2_1" value={props.data["4_2_1"]} onChange={(e)=>props.onChangeData("4_2_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="4_2_1" value={props.data["4_2_1"]} onChange={(e)=>props.onChangeData("4_2_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -74,7 +74,7 @@
       <td style={{paddingBottom: "15px"}}>Does the AI model's decision-making process prioritise the company's own product as compared to other competitors?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the AI model does not self-preference.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="4_2_2" value={props.data["4_2_2"]} onChange={(e)=>props.onChangeData("4_2_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="4_2_2" value={props.data["4_2_2"]} onChange={(e)=>props.onChangeData("4_2_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -91,7 +91,7 @@
       <td style={{paddingBottom: "15px"}}>Does the AI model undergo regular bias testing and impact assessments to mitigate potential bias outcomes?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the company conducts regular bias testing and impact assessments to prevent favouring of certain brands/products.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="4_2_3" value={props.data["4_2_3"]} onChange={(e)=>props.onChangeData("4_2_3",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="4_2_3" value={props.data["4_2_3"]} onChange={(e)=>props.onChangeData("4_2_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -108,7 +108,7 @@
       <td style={{paddingBottom: "15px"}}>Is there a mechanism in place to address and rectify any instances of favouritism or discrimination identified in the AI model's outputs?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the company has a clear mechanism for addressing and rectifying instances of favoritism or discrimination.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="4_2_4" value={props.data["4_2_4"]} onChange={(e)=>props.onChangeData("4_2_4",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="4_2_4" value={props.data["4_2_4"]} onChange={(e)=>props.onChangeData("4_2_4",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
