--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/flexibility.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/flexibility.mdx
@@ -20,7 +20,7 @@
       <td style={{paddingBottom: "15px"}}>Does the AI model support open and standardized input formats, ensuring that it can seamlessly interface with and process data from different AI systems without requiring proprietary inputs?</td>
       <td style={{paddingBottom: "15px"}}>The company should consider for AI model to support open and standardized input formats such that it can be interoperable with other AI systems.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="3_1_1" value={props.data["3_1_1"]} onChange={(e)=>props.onChangeData("3_1_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="3_1_1" value={props.data["3_1_1"]} onChange={(e)=>props.onChangeData("3_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -36,7 +36,7 @@
       <td style={{paddingBottom: "15px"}}>Does the company adhere to data portability standards and best practices, ensuring that the AI model can effectively import and export data in commonly used formats, thereby enabling interoperability with diverse AI systems?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that AI model adheres to data portability standards and best practices.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="3_1_2" value={props.data["3_1_2"]} onChange={(e)=>props.onChangeData("3_1_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="3_1_2" value={props.data["3_1_2"]} onChange={(e)=>props.onChangeData("3_1_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -52,7 +52,7 @@
       <td style={{paddingBottom: "15px"}}>Does the company provide tools and resources, as much as technically feasible, to facilitate seamless model transition and interoperability? (e.g. standardized model formats, API compatibility, or mechanisms that reduce the cost of switching between different AI models without requiring users to retrain from scratch.)?</td>
       <td style={{paddingBottom: "15px"}}>The company should consider providing tools for seamless data migration of trained parameters, eliminating the need to retrain the AI model, promoting interoperability.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="3_1_3" value={props.data["3_1_3"]} onChange={(e)=>props.onChangeData("3_1_3",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="3_1_3" value={props.data["3_1_3"]} onChange={(e)=>props.onChangeData("3_1_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -83,7 +83,7 @@
       <td style={{paddingBottom: "15px"}}>Does the company provide transparent and easily understandable information about the potential costs and requirements associated with switching to or from its AI models, ensuring that consumers are fully informed about the switching process?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the company provides transparent and easily understandable information about the costs and requirements associated with switching.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="3_2_1" value={props.data["3_2_1"]} onChange={(e)=>props.onChangeData("3_2_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="3_2_1" value={props.data["3_2_1"]} onChange={(e)=>props.onChangeData("3_2_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -100,7 +100,7 @@
       <td style={{paddingBottom: "15px"}}>Are there provisions in place to facilitate the portability of data and configurations when switching to or from the AI model, ensuring that consumers can transition with minimal data migration expenses?</td>
       <td style={{paddingBottom: "15px"}}>Ensure provisions are in place to facilitate the portability of data and configurations when switching to or from the AI model, minimizing data migration expenses.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="3_2_2" value={props.data["3_2_2"]} onChange={(e)=>props.onChangeData("3_2_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="3_2_2" value={props.data["3_2_2"]} onChange={(e)=>props.onChangeData("3_2_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -117,7 +117,7 @@
       <td style={{paddingBottom: "15px"}}>Are there measures in place to mitigate the risk of vendor lock-in, such as providing clear exit strategies and data portability options, to ensure that consumers can switch AI models without being unduly tied to a specific provider?</td>
       <td style={{paddingBottom: "15px"}}>Having clear exit strategies that enable consumers to switch AI models without being unduly tied to a specific provider.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="3_2_3" value={props.data["3_2_3"]} onChange={(e)=>props.onChangeData("3_2_3",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="3_2_3" value={props.data["3_2_3"]} onChange={(e)=>props.onChangeData("3_2_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -149,7 +149,7 @@
       <td style={{paddingBottom: "15px"}}>If the company is vertically integrated (e.g. company owns or controls multiple stages of its supply chain), does it ensure that its licensing or usage agreements does not require the specific use of its cloud services for deployment or operation?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the AI model's licensing or usage agreements does not mandate the use of the company’s cloud services for deployment or operation.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="3_3_1" value={props.data["3_3_1"]} onChange={(e)=>props.onChangeData("3_3_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="3_3_1" value={props.data["3_3_1"]} onChange={(e)=>props.onChangeData("3_3_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -166,7 +166,7 @@
       <td style={{paddingBottom: "15px"}}>If the company considers itself to be dominant, does the AI company offer its AI models as independent products, allowing consumers to select and utilize individual AI models without being required to purchase or use other bundled products?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the dominant company offers its AI models as independent products, and consumers are able select and utilize individual AI models without being obligated to purchase or use other bundled products.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="3_3_2" value={props.data["3_3_2"]} onChange={(e)=>props.onChangeData("3_3_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="3_3_2" value={props.data["3_3_2"]} onChange={(e)=>props.onChangeData("3_3_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
