--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/pro_competitive_algo.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/pro_competitive_algo.mdx
@@ -20,7 +20,7 @@
       <td style={{paddingBottom: "15px"}}>Is the AI model designed and used in a way that ensures its outputs are not meant to facilitate any anti-competitive agreements (e.g. pricing strategies are derived from the business models or decisions of other companies, after explicit or implicit agreements between competing companies)?</td>
       <td style={{paddingBottom: "15px"}}>The company's algorithm should not be designed to coordinate changes with other competitors and/or facilitating any anti-competitive agreements.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_1_1" value={props.data["1_1_1"]} onChange={(e)=>props.onChangeData("1_1_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_1_1" value={props.data["1_1_1"]} onChange={(e)=>props.onChangeData("1_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -36,7 +36,7 @@
       <td style={{paddingBottom: "15px"}}>Does the AI model undergo regular audits and reviews to ensure it does not inadvertently facilitate any anti-competitive agreements or collusive behaviour between competitors?</td>
       <td style={{paddingBottom: "15px"}}>Regular audits and reviews of the AI model help to detect and prevent instances where the AI model is facilitating coordination with other competitors.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_1_2" value={props.data["1_1_2"]} onChange={(e)=>props.onChangeData("1_1_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_1_2" value={props.data["1_1_2"]} onChange={(e)=>props.onChangeData("1_1_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -52,7 +52,7 @@
       <td style={{paddingBottom: "15px"}}>Are there clear protocols in place for identifying, reporting, and addressing any instances where the AI model might be used to enable anti-competitive practices?</td>
       <td style={{paddingBottom: "15px"}}>Clear protocols to be put in place for addressing potential algorithmic collusion behaviour.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_1_3" value={props.data["1_1_3"]} onChange={(e)=>props.onChangeData("1_1_3",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_1_3" value={props.data["1_1_3"]} onChange={(e)=>props.onChangeData("1_1_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -68,7 +68,7 @@
       <td style={{paddingBottom: "15px"}}>Are there safeguards in place to ensure that commercially sensitive AI model parameters (e.g. trained weights, hyperparameters and proprietary optimization techniques) are not shared through channels (such as one-to-one interactions or industry association gatherings) between competitors?</td>
       <td style={{paddingBottom: "15px"}}>Prevent the sharing of commercially sensitive model parameters with competitors through channels such as one-to-one interactions or industry association gatherings.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_1_4" value={props.data["1_1_4"]} onChange={(e)=>props.onChangeData("1_1_4",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_1_4" value={props.data["1_1_4"]} onChange={(e)=>props.onChangeData("1_1_4",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -100,7 +100,7 @@
       <br />_*Price below average variable cost by a dominant company is likely to be predatory. Companies that are not dominant, or pricing above average total cost, are unlikely to be engaging in predatory behaviour._</td>
       <td style={{paddingBottom: "15px"}}>Below-cost pricing by a dominant market player could be anti-competitive and harm competition.<br />Transparency and traceability in the AI model's pricing algorithms to identify instances of below-cost pricing can ensure that pricing strategies are not predatory.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_2_1" value={props.data["1_2_1"]} onChange={(e)=>props.onChangeData("1_2_1",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_2_1" value={props.data["1_2_1"]} onChange={(e)=>props.onChangeData("1_2_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -117,7 +117,7 @@
       <td style={{paddingBottom: "15px"}}>Below-cost pricing by a dominant market player could be anti-competitive and harm competition.
       <br />Regular audits and reviews of the AI model help detect and prevent instances of below-cost pricing.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_2_2" value={props.data["1_2_2"]} onChange={(e)=>props.onChangeData("1_2_2",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_2_2" value={props.data["1_2_2"]} onChange={(e)=>props.onChangeData("1_2_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -134,7 +134,7 @@
       <td style={{paddingBottom: "15px"}}>Below-cost pricing by a dominant market player could be anti-competitive and harm competition.
       <br />Considering relevant cost factors and market conditions in the AI model's pricing algorithm helps avoid setting prices below a reasonable cost threshold.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_2_3" value={props.data["1_2_3"]} onChange={(e)=>props.onChangeData("1_2_3",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_2_3" value={props.data["1_2_3"]} onChange={(e)=>props.onChangeData("1_2_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -151,7 +151,7 @@
       <td style={{paddingBottom: "15px"}}>Below-cost pricing by a dominant market player could be anti-competitive and harm competition.
       <br />Monitoring and addressing feedback ensure accountability and responsiveness to any predatory behavior.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_2_4" value={props.data["1_2_4"]} onChange={(e)=>props.onChangeData("1_2_4",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_2_4" value={props.data["1_2_4"]} onChange={(e)=>props.onChangeData("1_2_4",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
@@ -168,7 +168,7 @@
       <br />_*Examples of loyalty-inducing algorithms could include price discounts based on volume of purchase or years of subscription._</td>
       <td style={{paddingBottom: "15px"}}>Checks whether a dominant company has deployed a model with loyalty inducing algorithms that may have exclusionary effects, deterring entry of new AI developers and harming competition if the company has a dominant market position.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
-        <select id="1_2_5" value={props.data["1_2_5"]} onChange={(e)=>props.onChangeData("1_2_5",e.target.value)}>
+        <select style={{ backgroundColor: 'white', color: 'black' }} id="1_2_5" value={props.data["1_2_5"]} onChange={(e)=>props.onChangeData("1_2_5",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
           <option value="NA">Not Applicable</option>
           <option value="Yes">Yes</option>
