--- a/docs/detailed-guide/input-preparation/prepare-image.ipynb
+++ b/docs/detailed-guide/input-preparation/prepare-image.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to Prepare Image Datasets and Models\n",
+    "# Prepare Image Datasets and Models\n",
     "\n",
     "This guide will bring you through the preparation of image datasets and models for testing on AI Verify.\n",
     "\n",
