--- a/docs/detailed-guide/input-preparation/prepare-tabular.ipynb
+++ b/docs/detailed-guide/input-preparation/prepare-tabular.ipynb
@@ -6,7 +6,7 @@
    "id": "ffe0818b",
    "metadata": {},
    "source": [
-    "# How to Prepare Tabular Datasets and Models\n",
+    "# Prepare Tabular Datasets and Models\n",
     "This guide will bring you through examples on how to prepare datasets and models for AI Verify, for the following model types:\n",
     "1. [Binary Classification](#section1)\n",
     "2. [Multiclass Classification](#section2)\n",
