--- a/third-party-plugins/cccs_plugins/cccs_fairness_classification_2.0/widgets/technical_metrics.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_fairness_classification_2.0/widgets/technical_metrics.mdx
@@ -46,7 +46,7 @@ export const GetAllMetrics = ({ id, results, width, height }) => {
 <div className="widget-wrapper" style={{ height: 'auto' }}>
   ### Fairness Metrics
 
-  ## The displayed metric(s) demonstrate the equity between two subgroups. In cases where the selected feature consists of more than two subgroups (such as race with multiple subgroups), the parity value is determined by comparing the subgroup with the smallest value to the subgroup with the largest value.
+  ##### The displayed metric(s) demonstrate the equity between two subgroups. In cases where the selected feature consists of more than two subgroups (such as race with multiple subgroups), the parity value is determined by comparing the subgroup with the smallest value to the subgroup with the largest value.
 
   <ul>
     <li>
